2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/Preferences.cs: Don't attempt to set an empty array of
	  saved_windows if the key doesn't exist.  This prevents the ugly
	  error message in the output.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/Preferences.cs: Added a semi-colon.

2007-05-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonGroup.cs: Added new methods to add persons to groups
	  even though there are problems with the evolution-sharp libraries

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	Fix for #439181.
	
	* data/banter.schemas.in, Banter/Preferences.cs: Don't use a
	  placeholder for saved windows.
	* Banter/Application.cs: Deal with there being no saved group windows.

2007-05-17  Boyd Timothy <btimothy@gmail.com> 

	* Banter/banter.in: Reverted back to r62 to fix the libdir variable.

2007-05-16  Boyd Timothy <btimothy@gmail.com> 

	* data/banter.schemas.in, Banter/Preferences.cs: Use the proper
	  defaults for ContactStyles.
	* data/Themes/ListStyles, data/Themes/ListStyles/basic-black.tar.gz,
	  data/Themes/ListStyles/basic.tar.gz, data/Themes/ContactStyles,
	  data/Themes/ContactStyles/basic-black.tar.gz,
	  data/Themes/ContactStyles/basic.tar.gz, data/Themes/Makefile.am:
	  Renamed ListStyles -> ContactStyles.
	* Banter/ContactStyleInfo.cs: Implemented this class so ThemeManager
	  will work.
	* Banter/ContactStyle.cs: Use ContactStyleInfo.
	* Banter/MessageStyleInfo.cs: Modified this so it knows whether it's a
	  system style or not.  This prevents duplicate styles.
	* Banter/ThemeManager.cs: Set up ContactStyles correctly.
	* Banter/PersonCard.cs: Use ThemeManager.ContactStyle.

2007-05-16  Boyd Timothy <btimothy@gmail.com> 

	* Banter/ThemeManager.cs: Added code to update the valid_message_styles
	  gconf entry after they're all updated.

2007-05-16  Boyd Timothy <btimothy@gmail.com> 

	* Banter/MessageStyleInfo.cs: Added a debug msg. so we can tell when
	  MessageStyleInfo.IsValid is called.